--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
   </head>
 
   <body>
@@ -22,6 +23,9 @@
         </li>
         <li class="nav-list-item">
           <%= link_to "Lists", lists_path %>
+        </li>
+        <li class="nav-list-item">
+          <%= link_to "New List", new_list_path %>
         </li>
       </ul>
     </nav>
