--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -5,8 +5,9 @@
 
 
 <h2>本文</h2>
-<p><%= @list.body %></p>
-
+<div>
+  <p><%= @list.body %></p>
+</div>
 
 <h2>画像</h2>
 <% if @list.image.attached? %>
