--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -10,11 +10,13 @@
 </div>
 
 <h2>画像</h2>
+<div>
 <% if @list.image.attached? %>
   <%= image_tag @list.image, size: "300x300" %>
 <% else %>
   <%= image_tag'no_image', size: "300x300" %>
 <% end %>
+</div>
 
 <%= link_to"編集", edit_list_path(@list.id) %>
 <%= link_to"削除", list_path(@list.id), method: :delete, "date-confirm" => "本当に削除しますか？"%>
